--- a/login.html
+++ b/login.html
@@ -148,7 +148,7 @@
 
     <div class="btn">
       <button type="submit" class="button1">Login</button>
-      <button type="button" class="button2">Sign Up</button>
+      <button type="button" class="button2"><a href="signup.html">Signup</a></button>
     </div>
     <button type="button" class="button3">Forgot Password</button>
   </form>
